# AutoPartGen

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  inference.py  pyproject.toml  requirements.txt
autopartgen/: __init__.py  api.py  autopartgen.py
autopartgen/configs/: __init__.py  default.yaml  default_4096.yaml
autopartgen/diffusion/: diffusion.py
autopartgen/layers/: embedding.py
autopartgen/models/: __init__.py  conditioner.py  partgen_triposg_transformer.py
autopartgen/models/triposg/: README.md  attention_processor.py  embeddings.py
autopartgen/utils/: __init__.py  background.py  io.py  mask.py  mesh.py  pointcloud.py  postprocess.py  sampling.py  torch_utils.py  utils3d_torch.py
examples/: README.md
examples/image_mesh_mask/cactus/: mesh.glb
examples/image_mesh_mask/mushroom_house/: mesh.glb
examples/image_mesh_mask/purple_snowman/: mesh.glb
examples/image_mesh_mask/robot/: mesh.glb
examples/image_mesh_mask/small_tree/: mesh.glb
examples/image_mesh_mask/tree/: mesh.glb
examples/image_mesh_mask/white_toy_figure/: mesh.glb
examples/mesh/black_watch/: mesh.glb
examples/mesh/blue_stapler/: mesh.glb
examples/mesh/cherry_headphones/: mesh.glb
examples/mesh/computer/: mesh.glb
examples/mesh/dragon_statue/: mesh.glb
examples/mesh/fruit/: mesh.glb
examples/mesh/gray_computer_monitor/: mesh.glb
examples/mesh/hermit_crab/: mesh.glb
examples/mesh/potted_flower/: mesh.glb
examples/mesh/race_car/: mesh.glb
examples/mesh/sunglasses/: mesh.glb
examples/mesh/teal_sunglasses/: mesh.glb
examples/mesh/telescope/: mesh.glb
(+10 files in other folders)
